--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
     var strategy = document.getElementById("Strategy");
 
 const Strategies = [
-    "chaton",
-    "loutre",
-    "coincoin"
     "step by step, day by day",
     "focus on yourself",
     "Breathe more deeply",
-    "Go to an extreme, move back to a more comfortable place",s
+    "Go to an extreme, move back to a more comfortable place",
 ];
 
 let total = Strategies.length;
