--- a/index.html
+++ b/index.html
@@ -51,10 +51,18 @@
     var strategy = document.getElementById("Strategy");
 
 const Strategies = [
-    "step by step, day by day",
-    "focus on yourself",
+    "Step by step, day by day",
+    "Focus on yourself",
     "Breathe more deeply",
-    "Go to an extreme, move back to a more comfortable place",
+    "Collect moments like seaahells 🐚🌊"
+    "Fais le "
+    "Demain, tu regretteras de ne pas avoir commencé aujourd'hui"
+    "Fais le pour la futur toi"
+    "Choose to be happy"
+    "Happiness is a moment, positivity is a mindset"
+    "+=+"
+    "Si tu veux, tu peux"
+    "Focalise-toi sur le progrès, pas la perfection"
 ];
 
 let total = Strategies.length;
