--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@ const Strategies = [
     "Step by step, day by day",
     "Focus on yourself",
     "Breathe more deeply",
-    "Collect moments like seaahells 🐚🌊"
-    "Fais le "
-    "Demain, tu regretteras de ne pas avoir commencé aujourd'hui"
-    "Fais le pour la futur toi"
-    "Choose to be happy"
-    "Happiness is a moment, positivity is a mindset"
-    "+=+"
-    "Si tu veux, tu peux"
-    "Focalise-toi sur le progrès, pas la perfection"
+    "Collect moments like seaahells 🐚🌊",
+    "Fais le ",
+    "Demain, tu regretteras de ne pas avoir commencé aujourd'hui",
+    "Fais le pour la futur toi",
+    "Choose to be happy",
+    "Happiness is a moment, positivity is a mindset",
+    "+=+",
+    "Si tu veux, tu peux",
+    "Focalise-toi sur le progrès, pas la perfection",
 ];
 
 let total = Strategies.length;
