--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    width: 20rem;
    font-size: 1.2rem;
    padding: 0.5em;
-   opacity: 0.3;
+   opacity: 0.4;
   }
  </style>
  <!-- END SEARCH /////////////////////// -->
@@ -46,6 +46,43 @@
     <div id="Card">
     <h1 id ="Strategy">hello</h1>
 </div>
+
+<img id="bkgImg">
+
+<style>
+ #bkgImg{
+  position: absolute;
+  top:0;
+  left:0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+ }
+</style>
+
+<script>
+ let mesImages = [
+    "image.moi.web.jpg",
+    "image.ibiza.web.jpg",
+    "image.bestie.web.jpg",
+    "image.coeur.web.jpg",
+    "image.cosy.web.jpg",
+    "image.danse.web.jpg",
+    "image.livre.web.jpg",
+    "image.mer.web.jpg",
+    "image.noel.web.jpg"
+ ];
+ let theImage = document.getElementById("bkgImg");
+ let imagesTotal = mesImages.length;
+ let imagesRando = Math.random();
+ let imagesHasar = imagesRando * imagesTotal;
+ let imagesChoix = Math.floor( imagesHasar );
+ theImage.src = mesImages[imagesChoix];
+</script>
+
+
+
 <button onclick="window.location.reload();">⌘R</button>
     <script>
     var strategy = document.getElementById("Strategy");
@@ -71,10 +108,15 @@ let hasar = rando * total;
 let choix = Math.floor( hasar );
 
 strategy.innerHTML = Strategies[ choix ];
+//let mesImages = [
+    "image.moi.web.jpg",
+    "image.ibiza.web.jpg"];
+//let imagesTotal = mesImages.lenght;
+//let imagesRando = Math.random();
+//let imagesHasar = imagesRando * imagestotal;
+//let imagesChoix = Math.floor(imagesHasar);
+//theImage.src = mesImages[choix];
 
-
-    </script>
-
-
+</script>
 </body>
 </html>
