--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         "+=+",
         "Si tu veux, tu peux.",
         "Focalise-toi sur le progrès, pas la perfection.",
+        "Le silence n'efface pas les idées",
     ];
 
     let total = Strategies.length;
